# robopicksel

./: .gitignore
FPGA/camera/: Makefile  camera.cpp  dumpjpeg.C  fpga.cpp  fpga.h  hps_0.h  jpeg.C  jpeg.h  test_mem.cpp
ccam/: Makefile  ccam.C
data/: dpos2.txt
dumps/: 1541483597.dump  1541483675.dump
head/: Adafruit_PWM_Servo_Driver.py  Camera.py  Commands.py  Geometry.py  Head.py  HeadLocal.py  INSTALL  VL53L0X.py  build.sh  build.xml  head.cfg  setup.txt  web.py
head/static/: head.map.js  learnVision.html
head/templates/: main.html
head/tests/: A1116.py  VL53L0X_example.py  calibration.py  labels.py  (+12 more)
head/visionModule/: CMakeLists.camtest  CMakeLists.mac  CMakeLists.rasbicamtest  CMakeLists.rcmd  CMakeLists.txt  CMakeLists.win  Makefile.win
head/visionModule/clustering/: clustering.cpp  clustering.h
head/visionModule/cvpyr/: cvpyr.cpp  cvpyr.h
head/visionModule/dlearning/: dlearning.cpp  dlearning.h
head/visionModule/egb/: egb.cpp  egb.h
head/visionModule/gradient/: gradient.cpp  gradient.h
head/visionModule/jpeg/: jpegimage.cpp  jpegimage.h
head/visionModule/kp/: kp.cpp  kp.h
head/visionModule/mmal/: camera.cpp  camera.h  cameraTest.cpp
head/visionModule/module/: fireTest.cpp  visionModule.cpp  visionModule.h
head/visionModule/objects/: validator.cpp
head/visionModule/raspicam/: camera.h  raspicam.cpp  raspicam_test.cpp
head/visionModule/statimg/: statimg.cpp  statimg.h
head/visionModule/tests/: dlearningTest.cpp  fireTest.cpp
head/visionModule/utils/: image.cpp  image.h  jpeg.cpp  jpeg.h
voice/: wavtest.C  wvc.C
(+6 files in other folders)
